--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.TecnoAux"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.Register"
+            android:exported="false" />
+        <activity
             android:name=".Activity.Texto"
             android:exported="false" />
         <activity
