--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.TecnoAux"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.LinguagensTradutoresModulo"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.PassagemParametroModulo"
+            android:exported="false" />
+        <activity
             android:name=".Activity.FuncaoModulo"
             android:exported="false" />
         <activity
